RESOLVED FIXED217236
[Media in GPU Process] Web process is not allowed to set the AudioSession category
https://bugs.webkit.org/show_bug.cgi?id=217236
Summary [Media in GPU Process] Web process is not allowed to set the AudioSession cat...
Peng Liu
Reported 2020-10-02 10:46:35 PDT
[Media in GPU Process] Web process is not allowed to set the AudioSession category
Attachments
Patch (5.94 KB, patch)
2020-10-02 13:43 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-10-02 10:47:46 PDT
Peng Liu
Comment 2 2020-10-02 13:43:38 PDT
EWS
Comment 3 2020-10-03 10:26:59 PDT
Committed r267929: <https://trac.webkit.org/changeset/267929> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410361 [details].
Note You need to log in before you can comment on or make changes to this bug.