Source/WebKit/GPUProcess/media/RemoteAudioSessionProxy.cpp
@@ -73,6 +73,9 @@ RemoteAudioSessionConfiguration RemoteAudioSessionProxy::configuration()
 
 void RemoteAudioSessionProxy::setCategory(AudioSession::CategoryType category, RouteSharingPolicy policy)
 {
+    if (m_category == category && m_routeSharingPolicy == policy)
+        return;
+
     m_category = category;
     m_routeSharingPolicy = policy;
     audioSessionManager().setCategoryForProcess(*this, category, policy);
